# X11-Drop-file-demo

./: CMakeLists.txt  README.md
Src/: main.cpp
